--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "antd": "^5.24.6",
     "react-router-dom": "^7.5.0"
   },
-    "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "homepage": "https://irlknn.github.io"
+  "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
+  "homepage": "https://irlknn/irlknn.github.io/"
 }
