--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.21.2",
+    "firebase": "^11.7.1",
+    "firebase-admin": "^13.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
